    when uploading, similar to Mediawiki.
  * Add links to the edited section in edit summaries on recent changes,
    history, etc, similar to Mediawiki.
  * Remove ability to automatically upgrade from versions prior to 0.6.0.
  * Implement caching for diffs and topic versions to speed up page rendering.
  * Refactor exception handling to throw and catch exceptions at a more
    granular level.
  * Upgrade to JFlex 1.4.3.
  * Upgrade to JUnit 4.5.
  * Upgrade to JSTL standard taglib 1.1.2.
  * Upgrade to ehcache 1.6.0-beta3.

Bugfixes:

  * Update Spring Security configuration to remove reliance on the deprecated
    FilterInvocationDefinitionSourceEditor class.
  * Fix the Bliki local Maven repository metadata to resolve build warnings.
  * When a password or other value is found un-encrypted in a properties file
    automatically encrypt it to allow for changing database passwords, etc.
    Reported by rebecca and an anonymous user.


0.7.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix missing edit toolbar during preview.  Reported by hanspeterklapf.
  * Fix MS SQL error when searching for user contributions (hanspeterklapf).
  * Fix MS SQL upgrade errors (hanspeterklapf).
  * Fix "array index '1' is invalid" error during setup with Resin 3.2.1.
    Reported by James.
  * Fix TOC rendering issue when depth exceeds the configured max depth.
  * Fix double-escaping of non-existent topic names when using URLs such as
    http://jamwiki.org/wiki/en/TestÜmlaut.  Reported by hanspeterklapf.
  * Fix breakage when moving topics containing special characters such as
    "TestÜmlaut".  Reported by hanspeterklapf.
  * Display any editable category topic text above the list of category items.
    Reported by axcelclk.
  * Fix failures when upgrading from versions earlier than 0.6.0.  Reported by
    Eric.
  * Groups were not being displayed on the Special:Roles page when no roles were
    assigned to the group.  Reported by hanspeterklapf.
